<resources>
    <string name="app_name">ZetPass</string>
    <string name="home">All Records</string>
    <string name="inbox">Inbox</string>
    <string name="friends">Friends</string>
    <string name="invite">Invite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>

    <string name="mail">Mail</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="registration">Registration</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="online_mode">Online mode</string>
    <string name="ok_button">SAVE</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="note">Note</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>

    <string-array name="records">
        <item>standard</item>
        <item>note</item>
    </string-array>

</resources>