<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_book24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/menu_inbox24"
            android:title="@string/inbox" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/menu_friends24"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/menu_invite24"
            android:title="@string/invite" />
    </group>
</menu>