<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.options.OptionsFragment"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_ip"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ip"/>

    <EditText
        android:id="@+id/edit_port"
        android:layout_margin="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="5"
        android:hint="@string/port"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/online"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online_mode"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/accept_button"
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/ok_button" />

</LinearLayout>