<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RedactFragment"
    android:gravity="center_horizontal"

    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_application"
        android:textSize="22sp"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/application" />

    <EditText
        android:id="@+id/edit_login"
        android:textSize="22sp"
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/edit_password"
        android:textSize="22sp"
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password" />

    <Button
        android:id="@+id/ok_button"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button" />
</LinearLayout>